Adding for 8AM.

--- a/website/about.html
+++ b/website/about.html
@@ -17,7 +17,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html" class="active">About</a></li>
             <li><a href="pKa2AA.html">pKa 2 AA</a></li>
-            <li><a href="aminos.html">Amino Acids</a></li>
+            <li><a href="aminos.html">Aminos</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
    	</div>
@@ -26,22 +26,44 @@
 
 <div class="page-wrap">
 <div class="wrap3">  
-  <div class=" leftcol">
-  <div class="panel">
   	<div class="title">
-  		<h1>About</h1>
+  	<h1>About</h1>
 	<br>
 	<br>
         <span>Experiment</span>
 	<br>
 	<br>
-	<p> information about experi here </p>
-    </div>
-  	<div class="content">
-    	<p></p>
-    </div>
-  </div>	
-  </div>
+	<p> Familiarity with amino acid chemistry including pKa values, pI values and protonation states is important for every
+biochemist. The protonation states of amino acids are important for understanding enzymatic catalysis, pH induced
+conformational changes, and the intermolecular interactions which stabilize the tertiary and quaternary structure of
+proteins.</p>
+
+<p>Creating a titration curve for a weak acid, such as phosphoric acid or an amino acid is a typical undergraduate
+laboratory experiment.Titration curves are obtained when the pH of a given volume of a sample solution varies after successive
+addition of acid or alkali/basic. The curves are usually plots of pH against the volume of titrant added or more correctly against
+the number of equivalents added per mole of the sample. The titration curve of an amino acid empirically defines several
+characteristics. The precise number of each characteristic depends on the nature of the amino acid being titrated:
+1) the number of ionizing groups
+2) the pKa of the ionizing group(s)
+3) the buffer region(s)
+</p>
+
+<p>Each of these amino acids has a different side chain chemistry, but all
+of the amino acids have an acidic group (—COOH) and a basic group (NH2 )
+attached to the α carbon. The strong positive charge on the amino group
+induces a tendency for the carboxylic acid group to lose a proton. Some amino
+acids—such as the ones in this experiment—contain ionizable groups in their
+side chains that also act as weak acids or bases, giving off or taking on protons
+when the pH is altered. The dissociation of protons proceeds in a certain order
+which depends on the acidity of the proton: the one which is most acidic and
+having a lower pKa will dissociate first. So, typically the H+ on the α-COOH
+group (pKa1 ) will dissociate before that on the α-NH3 group (pKa2 ). This is
+because the resonance delocalization of charge on the carboxylic acid group
+stabilizes the conjugate base anion, whereas the amino group does not exhibit resonance stabilization </p>
+   
+
+</div>	
+</div>
     
   <div class="clearing"></div>
 </div>
