--- a/website/contact.html
+++ b/website/contact.html
@@ -18,7 +18,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="pKa2AA.html">pKa 2 AA</a></li>
-            <li><a href="aminos.html">Amino Acids</a></li>
+            <li><a href="aminos.html">Aminos</a></li>
             <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
     </div>
