--- a/website/index.html
+++ b/website/index.html
@@ -19,7 +19,7 @@
             	<li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="pKa2AA.html">pKa 2 AA</a></li>
-            <li><a href="aminos.html">Amino Acids</a></li>
+            <li><a href="aminos.html">Aminos</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         </div>
@@ -27,18 +27,16 @@
 </div><!---menu-wrap-End--->
 
 <div class="page-wrap">
-<div class="wrap">
+<div class="wrap3">
 	<p>Hello, and welcome to pH to Amino Acid! This Web Application is capable of taking 
 known pKa values and find the amino acid. The webapp is also able to run titration curves 
-with and without values and find the amino acid as well.</p>
+with and without values and find the amino acid as well (Currently, only pKa to AA is available in the tab section above).</p>
 	<br>
 	<div class="box">
     	<div class="panel marRight30">
-    		<div class="title">
-            	<h1>Known pKa to Amino Acid (using side chains)</h1>
+            	<h1>Known pKas to Amino Acid</h1>
             </div>
-            <div class="content">
-            	<p>Take pKa of side chains to find isoelectric point and matching amino acid</p>
+            	<p>Take pKa of two closest value side chains to find isoelectric point and matching amino acid</p>
        		<br>
 		<br>
 	 </div>
@@ -46,27 +44,20 @@ with and without values and find the amino acid as well.</p>
     
     <div class="box marRight30">
     <div class="panel">
-    <div class="title">
           <h1>Titration Curves with Values</h1>
     </div>
-    <div class="content">
           <p>Create a titration curve from values</p>
        		<br>
 		<br>
     </div>
-    </div>
-    </div>
     <div class="box">
     <div class="panel">
-    <div class="title">
        	  <h1>Titration Curve without Values </h1>
     </div>
-    <div class="content">
             <p>Create titration curve without any values to find an amino acid</p>
        		<br>
 		<br>
-    </div>
-    </div>
+
     </div>
 </body>
 </html>
