--- a/website/index.html
+++ b/website/index.html
@@ -15,16 +15,17 @@
 
 <div class="menu-wrap">
 	<div class="menu">
-		<ul>
-            	<li><a href="index.html" class="active">Home</a></li>
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="pKa2AA.html">pKa 2 AA</a></li>
             <li><a href="aminos.html">Aminos</a></li>
+            <li><a href="simpleTitration.html">Titration</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         </div>
 </div>
-</div><!---menu-wrap-End--->
+<!---menu-wrap-End--->
 
 <div class="page-wrap">
 <div class="wrap3">
@@ -58,6 +59,7 @@ with and without values and find the amino acid as well (Currently, only pKa to 
        		<br>
 		<br>
 
+    </div>
     </div>
 </body>
 </html>
