--- a/website/pKa2AA.html
+++ b/website/pKa2AA.html
@@ -14,13 +14,14 @@
 
 <div class="menu-wrap">
 	<div class="menu">
-	<ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="pKa2AA.html" class="active">pKa 2 AA</a></li>
-            <li><a href="aminos.html">Aminos</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="pKa2AA.html" class="active">pKa 2 AA</a></li>
+			<li><a href="aminos.html">Aminos</a></li>
+			<li><a href="simpleTitration.html">Titration</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
     </div>
 </div><!---menu-wrap-End--->
 
@@ -29,7 +30,6 @@
 
   	<div class="title">
   		<h1>Tool: pK to Amino Acid</h1>
-		<br>
 		<br>
         <span>Take pKa of side chains and return amino acid match. Please be sure that chains being added together are closest in value. 
 For example, if my unknown amino acid had a pKa of 2, 4, and 8. The pKas of the chains with 2 and 4 would be added and divided to form the isoelectric point.
