--- a/website/index.html
+++ b/website/index.html
@@ -18,48 +18,36 @@
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="pKa2AA.html">pKa 2 AA</a></li>
             <li><a href="aminos.html">Aminos</a></li>
             <li><a href="simpleTitration.html">Titration</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        </div>
+    </div>
 </div>
 <!---menu-wrap-End--->
 
 <div class="page-wrap">
-<div class="wrap3">
-	<p>Hello, and welcome to pH to Amino Acid! This Web Application is capable of taking 
-known pKa values and find the amino acid. The webapp is also able to run titration curves 
-with and without values and find the amino acid as well (Currently, only pKa to AA is available in the tab section above).</p>
-	<br>
-	<div class="box">
-    	<div class="panel marRight30">
-            	<h1>Known pKas to Amino Acid</h1>
-            </div>
-            	<p>Take pKa of two closest value side chains to find isoelectric point and matching amino acid</p>
-       		<br>
-		<br>
-	 </div>
-    </div>
-    
-    <div class="box marRight30">
-    <div class="panel">
-          <h1>Titration Curves with Values</h1>
-    </div>
-          <p>Create a titration curve from values</p>
-       		<br>
-		<br>
-    </div>
-    <div class="box">
-    <div class="panel">
-       	  <h1>Titration Curve without Values </h1>
-    </div>
-            <p>Create titration curve without any values to find an amino acid</p>
-       		<br>
-		<br>
+    <div class="wrap3">
 
-    </div>
+        <br />
+        <br />
+        <p>
+            Hello, and welcome to pH to Amino Acid! This Web Application is capable of taking
+            known pKa values to find the possible amino acid matches and also take a file formatted in a certain way described in about
+            to find the titration curve of an unknown amino acid in a sample.
+        </p>
+        <br>
+        <p>In the about page, you will find information on the experiment and how to run it</p>
+        <br>
+        <p>In the PKA 2 AA page - you can use known pKa values from funning the experiment to find possible amino acid matches</p>
+        <br>
+        <p>In the Aminos page - you will find information on all the amino acids, their uses, and their typical pH/pKa values and isoelectric points</p>
+        <br>
+        <p>In the titration page, you will be able to create a titration curve that can be copied and pasted into needed documents and change values for said curve</p>
+        <br>
+        <p>Finally, on the contact page you will find information in how to contact the admin to let them know what you think of the application and to contact them on possible changes!</p>
+
+
     </div>
 </body>
 </html>
