--- a/website/contact.html
+++ b/website/contact.html
@@ -6,40 +6,70 @@
 </head>
 <body>
 
-<div class="header-wrap">
-	<div class="logo">
-		<h1>pH to Amino Acid</h1>
-    </div>
-</div><!---header-wrap-End--->
+    <div class="header-wrap">
+        <div class="logo">
+            <h1>pH to Amino Acid</h1>
+        </div>
+    </div><!---header-wrap-End--->
 
-<div class="menu-wrap">
-	<div class="menu">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="pKa2AA.html">pKa 2 AA</a></li>
-            <li><a href="aminos.html">Aminos</a></li>
-            <li><a href="simpleTitration.html">Titration</a></li>
-            <li><a href="contact.html" class="active">Contact</a></li>
-        </ul>
-    </div>
-    
-</div><!---menu-wrap-End--->
+    <div class="menu-wrap">
+        <div class="menu">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="aminos.html">Aminos</a></li>
+                <li><a href="simpleTitration.html">Titration</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
+            </ul>
+        </div>
 
-<div class="page-wrap">
-<div class="wrap3">  
-  <div class="leftcol">
-  <div class="panel">
-  	<div class="title">
-  		<h1>Contact </h1>
-	<br>
-        <p>For anyone that is having issues with the website and or tool,
- please feel free to reach out to me at gillianlove555@gmail.com!</p>
+    </div><!---menu-wrap-End--->
+
+    <div class="page-wrap">
+        <div class="wrap3">
+            <div class="panel"></div>
+            <div class="title">
+                <h1>Contact </h1>
+            </div>
+        </div>
+        <br>
+        <p>
+            For anyone that is having issues with the website and or tool,
+            please feel free to reach out to me at gillianlove555@gmail.com!
+        </p>
     </div>
-      <div class="panel">
+    <div class="panel">
         <div class="clearing"></div>
-      </div>
-  </div>  
-  </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 </body>
 </html>
